Fix h1 line height sticking out of center element.

--- a/src/sass/mtgc.sass
+++ b/src/sass/mtgc.sass
@@ -10,6 +10,7 @@ body
   background-color: transparent
   center
     text-align: left
+    padding-top: rem(1)
     div#header
       position: relative !important
       width: auto !important
@@ -19,7 +20,6 @@ body
       background: none !important
       color: #000 !important
       h1
-        position: relative
         top: auto !important
       & + div
         margin: 0 !important
